@@ -1,5 +1,7 @@
 0.7.4
 - Add de-/select all buttons to Batch | Statistical analysis
+- Bugfixes:
+  - Young's modulus not computed in batch mode (#149)
 0.7.3
 - Add interface to calculate elastic modulus
 - Bugfixes:
